CHANGELOG fuer c't-Bot
======================
2006-12-18 Timo Sandmann [mail@timosandmann.de]: Servoverhalten optimiert

2006-12-16 Timo Sandmann [mail@timosandmann.de]: Kompatibilitaet mit einigen MMC / SD-Cards verbessert

2006-12-10 Timo Sandmann [mail@timosandmann.de]: Robustheit beim MMC-Timing verbessert, kleine Bugfixes, VM erweitert

2006-12-08 Benjamin Benz [bbe@heise.de]:  ENA-Bugfixes, catch_pillar eingefuehrt

2006-12-07 Timo Sandmann [mail@timosandmann.de]: Support fuer ATmega644 eingebaut

2006-12-07 Timo Sandmann [mail@timosandmann.de]: Detailverbesserungen am MMC-Code und Tippfehler in bot_scan_behaviour() korrigiert

2006-12-07 Benjamin Benz [bbe@heise.de]: MMC-Code von Timo und Benjamin gemerged

2006-12-07 Benjamin Benz [bbe@heise.de]: Enable-System fuer Maus und MMC umgestellt

2006-12-07 Benjamin Benz [bbe@heise.de]: UART auf 57600 Baud umgestellt

2006-12-07 Benjamin Benz [bbe@heise.de]: Servo-Verhalten eingefuehrt

2006-12-04 Timo Sandmann [mail@timosandmann.de]: Low-Level-Funktionen fuer MMC / SD-Card anders implementiert, 1. Version eines virtuellen Speicher-Managements fuer MMC / SD-Card eingefuehrt, MMC- / SD-Card-Code aufgeraeumt

2006-12-03 Timo Sandmann [mail@timosandmann.de]: Die delay-Funktion arbeitet jetzt auch im (sehr) theoretischen Worstcase (Interrupt unterbricht Timer-Abfrage und gleichzeitiger Uebertrag an 8-Bit Grenze) korrekt

2006-11-23 Timo Sandmann [mail@timosandmann.de]: Bugfix fuer gettimeofday-Problem unter Win und Map-Konvertierung nur, wenn MAP auch an ist

2006-11-10 Benjamin Benz [bbe@heise.de]: Mini-fat eingefuehrt

2006-11-09 Benjamin Benz [bbe@heise.de]: map.c fuer Flash-Karte vorbereitet, die 2.

2006-11-08 Benjamin Benz [bbe@heise.de]: map.c fuer Flash-Karte vorbereitet

2006-11-08 Benjamin Benz [bbe@heise.de]: Code fuer MMC-/SD-Karten funktioniert nun im Bit-Bang-Betrieb

2006-11-07 Benjamin Benz [bbe@heise.de]: Code fuer MMC-/SD-Karten eingefuehrt
