@@ -1,5 +1,8 @@
 CHANGELOG fuer c't-Bot
 ======================
+2006-12-19  Frank Menzel(menzelfr@gmx.de) Aenderungen der Verhaltensanzeige: 1.) sichtbaren Priobereich auf Defines in bot-local.h gelegt 2.) dynamische Verhaltensanzeige 
+                         via Define ermoeglicht Online-Sehen der Zustandsaenderungen, Selektion eines Verh. geht sofort durch
+
 2006-12-18 Timo Sandmann [mail@timosandmann.de]: Servoverhalten optimiert
 
 2006-12-16 Timo Sandmann [mail@timosandmann.de]: Kompatibilitaet mit einigen MMC / SD-Cards verbessert
